--- a/app/javascript/flavours/polyam/styles_new/mastodon/components.scss
+++ b/app/javascript/flavours/polyam/styles_new/mastodon/components.scss
@@ -7829,6 +7829,8 @@ img.modal-warning {
   color: var(--color-text-on-media);
   background: var(--color-bg-media);
   max-width: 100%;
+  max-height: max(400px, 60vh);
+  margin-inline: auto;
   border-radius: 8px;
   box-sizing: border-box;
   display: flex;
